--- a/etc/.inputrc
+++ b/etc/.inputrc
@@ -1,5 +1,15 @@
-### Word forwarding
 
+
+#!/usr/bin/env/bash
+
+# My .inputrc
+#
+#
+
+### Word forwarding {{{
+
+#
+#
 #use control + arrow keys to move per word
 "\e[1;5C": forward-word
 "\e[1;5D": backward-word
@@ -8,12 +18,15 @@
 "\e\e[C": forward-word
 "\e\e[D": backward-word
 
-### Autocompletion
+### Autocompletion {{{
 
+#
+#
 # Use the text that has already been typed as the prefix for searching through
 # commands (i.e. more intelligent Up/Down behavior)
 "\e[B": history-search-forward
 "\e[A": history-search-backward
+
 # Make Tab autocomplete regardless of filename case
 set completion-ignore-case on
 #
@@ -40,4 +53,5 @@ set skip-completed-text on
 set input-meta on
 set output-meta on
 set convert-meta off
-
+# }}}
+#
