added package display widget

--- a/.pylintrc
+++ b/.pylintrc
@@ -93,6 +93,7 @@ disable=raw-checker-failed,
 		missing-module-docstring,
 		trailing-whitespace,
 		missing-final-newline,
+		no-name-in-module,
 
 
 # Enable the message, report, category or checker with the given id(s). You can
