--- a/configuration/packages.toml
+++ b/configuration/packages.toml
@@ -1,58 +1,35 @@
 
-
-
-# Basics
-[[package_groups]]
-name="Basics"
-
-[[package_groups.packages]]
+[[packages]]
 name="Python"
-[[package_groups.packages.search_names]]
-name="python3"
+groups=["Home Basics"]
+search_names=["python3"]
 
-# Home Basics
-[[package_groups]]
-name="Home Basics"
-
-[[package_groups.packages]]
+[[packages]]
 name="Spotify"
-[[package_groups.packages.search_names]]
-name="spotify"
+groups=["Home Basics"]
+search_names=["spotify"]
 
-[[package_groups.packages]]
-name="Python"
-[[package_groups.packages.search_names]]
-name="python3"
-
-[[package_groups.packages]]
+[[packages]]
 name="Terminator"
-[[package_groups.packages.search_names]]
-name="terminator"
+groups=["Home Basics", "Terminal Tools"]
+search_names=["terminator"]
 
-[[package_groups.packages]]
+[[packages]]
 name="Neovim"
-[[package_groups.packages.search_names]]
-name="neovim"
-[[package_groups.packages.search_names]]
-name="nvim"
+groups=["Home Basics", "Terminal Tools"]
+search_names=["nvim", "neovim"]
 
-# Terminal Tools
-[[package_groups]]
-name="Terminal Tools"
-
-[[package_groups.packages]]
-name="Terminator"
-[[package_groups.packages.search_names]]
-name="terminator"
-
-[[package_groups.packages]]
-name="Neovim"
-[[package_groups.packages.search_names]]
-name="neovim"
-[[package_groups.packages.search_names]]
-name="nvim"
-
-[[package_groups.packages]]
+[[packages]]
 name="NCDU"
-[[package_groups.packages.search_names]]
-name="ncdu"
+groups=["Terminal Tools"]
+search_names=["ncdu"]
+
+[[packages]]
+name="something"
+groups=["Terminal Tools"]
+search_names=["ncdu"]
+
+[[packages]]
+name="NCDU"
+groups=["Terminal Tools"]
+search_names=["htop"]
