--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,11 @@ build-backend = "setuptools.build_meta"
 
 [metadata]
 name = dotfiles
-version = 0.3.0
+version = 0.4.0
+description = 'My dotfiles, installation scripts, and packages'
+url = 'https://github.com/LuukHenk/dotfiles'
+author = 'Luuk Henk'
+license = 'MIT'
 
 [aliases]
 test=pytest
