--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-toml ={ version = "0.8.12" }
-home={version = "*"}
+toml = { version = "0.8.12" }
+home = { version = "0.5.9" }
